Fix text overflow in forms

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -193,6 +193,7 @@
                         display: flex;
                         align-items: center;
                         margin-bottom: 10px;
+                        flex-wrap: wrap;
                         & > *:not(:first-child) {
                             margin-left: 10px;
                         }
